# ru-plumescan

./: .gitignore  Algorithm.md  CITATION.cff  CLAUDE.md  DNA.md  LICENSE  OpenSpec.md  README.md  RNA.md  Roadmap.md
DevPrompts/: P-00.0_repo_init.md  P-00.1_industrial_and_reference_proxy.md  P-00.1_industrial_proxy_v1_archived.md  P-01.0c_provenance_hardening.md  P-01.0d_urban_masking.md  P-01.2_dual_baseline_validation.md  P-02.0a_ch4_detection_engine.md  README.md
config/: event_overrides.json
docs/: KNOWN_TODOS.md  README.md  p-01.0a_altaisky_qa_result.json  p-01.0a_diagnostics_v1.json  p-01.0a_diagnostics_v1_export_run.json  p-01.0a_diagnostics_v1_full.json  p-01.0a_escalation_yugansky_fail.md  p-01.0a_validation_report.md  p-01.0b_closure_report.json  p-01.0b_state_CH4_2025.json  p-01.0b_state_NO2_2025.json  p-01.0b_state_SO2_2025.json  (+12 more)
src/py/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/py/analysis/: __init__.py
src/py/rca/: __init__.py  base_ingester.py  classify_events.py  classify_source_types.py  common_schema.py  detection_ch4.py  detection_helpers.py  provenance.py
src/py/rca/ingesters/: __init__.py
src/py/setup/: __init__.py  altaisky_qa_test.py  archive_legacy_v1_backgrounds.py  backfill_provenance.py  build_ch4_event_catalog.py  build_industrial_buffered_mask.py  build_industrial_buffered_mask_per_type.py  build_industrial_mask.py  build_industrial_proxy.py  build_protected_areas_mask.py  build_reference_baseline_ch4.py  build_regional_climatology.py  build_urban_mask.py  build_viirs_proxy.py  classify_events.py  closeout_p_01_0d.py  closeout_phase_1b.py  dual_baseline_analysis.py  generate_figure1.py  init_gee_assets.py  inspect_industrial_sources.py  investigate_reference_extrapolation.py  launch_p_01_0d_rebuild.py  preflight_no2_so2_verify.py  test_dual_baseline_pipeline.py  update_source_points_p_01_0d.py  validate_detection_regression.py  validate_detection_synthetic.py
src/py/so2_fit/: __init__.py
src/py/synthetic/: __init__.py
src/py/tests/: test_classify_events.py  test_classify_source_types.py  test_common_schema.py  test_detection_ch4_integration.py  test_detection_ch4_unit.py  test_detection_helpers.py  test_detection_integration.py  test_provenance.py
(+27 files in other folders)
